# mergesort

./: Cargo.toml
benches/: bench.rs
examples/: sort.rs
src/: insertion_sort.rs  kmerge_impl.rs  lib.rs  main.rs  merge.rs  rayon.rs  slice_merge.rs  stability.rs  steal.rs  task.rs  test.rs  three_merge.rs
tests/: stability.rs
