[package]
name = "mergesort"
version = "0.1.0"
authors = ["Maiko Müller <maiko.muller@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {git = "https://github.com/ma1ko/rayon"}
rayon_logs = { git = "https://github.com/ma1ko/rayon-logs"}
lazy_static = "*"
crossbeam-utils = "*"
criterion = {git = "https://github.com/ma1ko/criterion.rs"}
rand = "*"
itertools = "*"

[[bench]]
name = "bench"
harness = false

