[package]
name = "mergesort"
version = "0.1.0"
authors = ["Maiko Müller <maiko.muller@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rayon = {path = "../rayon"}
rayon = {git = "https://github.com/ma1ko/rayon"}
rayon_logs = { optional = true, git = "https://github.com/ma1ko/rayon-logs"}
rayon_adaptive = {git = "https://github.com/ma1ko/rayon-adaptive"}
lazy_static = "*"
crossbeam-utils = "*"
rand = "*"
itertools = "*"
num_cpus = "*"
num = "*"
adaptive_algorithms = {git="https://github.com/ma1ko/adaptive_algorithms"}
# adaptive_algorithms = {path="../adaptive_algorithms"}

[dev-dependencies]
criterion = {git = "https://github.com/ma1ko/criterion.rs"}
#criterion = {path = "../criterion.rs"}


[features]
logs = ["rayon_logs", "rayon_adaptive/logs", "adaptive_algorithms/logs"]
statistics = ["adaptive_algorithms/statistics"]

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true 


[profile.release]
debug = true
